# semantic-kernel_1

./: .coveragerc  .env.example  .gitignore  LICENSE  README.md  app.py  env.example  main.py  pyproject.toml  pytest.ini  requirements.txt  reset_agent_state.py  run_chatbot.py  run_cli_concierge.py  run_cli_maintainer.py  run_email_agent.py  run_tests.sh
.claude/: claude.md  kernel-basics.md  managing_chat_histories.md  readme.md  semantic_kernel_agents.md  semantic_kernel_auto-function.md  semantic_kernel_plugins.md  semantic_kernel_processes.md  semantic_kernel_search.md
agent/: QUICK_START_README.md  agent_config.yaml  chat_interface.py  config.py  main.py  reset_agent_state.py  run_agent_chat.py  run_demo_agent.py  run_live_agent.py  wipe_notes_fields.py
agent/models/: change_request.py  email_record.py
agent/plugins/: classification_plugin.py  email_plugin.py  extraction_plugin.py  search_plugin.py  state_plugin.py
analysis/: qa_assessment_report.json  test_plan_roadmap.md
app/: main.py
archived/: README.md
config/: agent_config.yaml
data/: app_machines.csv  app_team_index.csv  employees.csv  org_structure.csv  srm_catalog.csv  srm_index.csv  teams.csv
docs/: ARCHITECTURE.md  CHATBOT.md  CLI_CONCIERGE.md  CLI_MAINTAINER_GUIDE.md  CLI_MAINTAINER_MANUAL_TEST.md  EVALUATION.md  MIGRATION_SUMMARY.md  README.md  SETUP.md  VECTOR_STORE_CONFIGURATION.md  cli_concierge_usage.md
logs/: events_20251014.jsonl
sk_nlq_recommender_poc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_chatbot_startup.py
web/: index.html  script.js  style.css
(+218 files in other folders)
