[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sk-nlq-recommender-poc"
version = "0.1.0"
description = "PoC web app: NL query to team/SRM recommendations using Semantic Kernel, Azure AI Search, Azure OpenAI"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.6.0",
    "pandas>=2.2.0",
    "python-pptx>=0.6.21",
    "azure-search-documents>=11.6.0",
    "openai>=1.40.0",
    "semantic-kernel>=0.9.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "orjson>=3.10.0",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.3.0",
    "pylint>=3.2.0",
    "httpx>=0.27.0",
]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --cov=semantic-kernel_poc/app --cov-report=term-missing"
testpaths = [
    "semantic-kernel_poc/tests",
]



# Limit package discovery to the application package only
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["data*", "synthetic_info*", "tests*"]

[tool.setuptools.package-data]
app = ["templates/*", "static/*"]